src/objects/QPMS__Decision_Tree_Template__c.object
<CustomObject>
    <fields>
        <fullName>QPMS__DT_Name__c</fullName>
        <label>DT Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__DT_Type__c</fullName>
        <description>This field is used in Decision tree initiation page</description>
        <label>DT Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regulatory</fullName>
                    <default>true</default>
                    <label>Regulatory</label>
                </value>
                <value>
                    <fullName>Non Regulatory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Decision_Tree_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>QPMS__Decision_Tree_Template__c</referenceTo>
        <relationshipLabel>Decision Tree Tempates</relationshipLabel>
        <relationshipName>Revisions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Exception__c</fullName>
        <label>Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Name__c</fullName>
        <formula>Name +&apos; (&apos;+  QPMS__Revision__c  +&apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Name__c</fullName>
        <formula>QPMS__Decision_Tree_Template__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Question_Status__c</fullName>
        <label>Question Update Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Reason__c</fullName>
        <description>this is field is used while activating and deactivating of Decision Tree</description>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Regulatory_Body__c</fullName>
        <description>This field is used in initiation page of Decision tree</description>
        <label>Regulatory Body</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>US-FDA</fullName>
                </value>
                <value>
                    <fullName>EEMEA</fullName>
                    <isActive>false</isActive>
                    <label>EEMEA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <isActive>false</isActive>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>FDA</fullName>
                    <isActive>false</isActive>
                    <label>FDA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Revision__c</fullName>
        <description>This field is used for creating revision of current Decision tree in initiation page</description>
        <label>Revision</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>This field is used for the status of Decision Tree</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Total_Questions__c</fullName>
        <description>This field is used for internal purpose to count questions in Decision Tree Template questionnaire.</description>
        <label>Total Questions</label>
        <summaryForeignKey>QPMS__Decision_Tree_Template_Questionnaire__c.QPMS__Decision_Tree_Template__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Decision Tree Template</label>
    <listViews>
        <fullName>QPMS__All_Decision_Tree_Templates</fullName>
        <columns>NAME</columns>
        <columns>QPMS__DT_Name__c</columns>
        <columns>QPMS__Revision__c</columns>
        <columns>QPMS__DT_Type__c</columns>
        <columns>QPMS__Regulatory_Body__c</columns>
        <columns>QPMS__Status__c</columns>
        <columns>QPMS__Total_Questions__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Decision Tree Templates</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>DT Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Decision Tree Tempates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>QPMS__Regulatory_Body_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(QPMS__DT_Type__c  , &apos;Regulatory&apos; ) ,  ISPICKVAL(QPMS__Regulatory_Body__c,&apos;&apos; )  , false)</errorConditionFormula>
        <errorDisplayField>QPMS__Regulatory_Body__c</errorDisplayField>
        <errorMessage>Regulatory is required</errorMessage>
    </validationRules>
</CustomObject>